# youtube-transcript-grabber

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_HANDOFF.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api.md  development.md  reference_working_code.py  troubleshooting.md
examples/: README.md  basic_usage.py
examples/advanced/: batch_processing.py  custom_formatting.py
src/youtube_transcript_grabber/: __init__.py  cli.py  exceptions.py  grabber.py
tests/: __init__.py  conftest.py  test_cli.py  test_exceptions.py  test_grabber.py
