[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcript-grabber"
version = "0.1.0"
description = "A robust, browser-based YouTube transcript extractor that navigates YouTube's UI like a human"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joel Legris", email = "jylegris@users.noreply.github.com"},
]
keywords = ["youtube", "transcript", "scraping", "playwright", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/jylegris/youtube-transcript-grabber"
Documentation = "https://github.com/jylegris/youtube-transcript-grabber#readme"
Repository = "https://github.com/jylegris/youtube-transcript-grabber"
"Bug Tracker" = "https://github.com/jylegris/youtube-transcript-grabber/issues"

[project.scripts]
youtube-transcript-grabber = "youtube_transcript_grabber.cli:main"
ytg = "youtube_transcript_grabber.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["youtube_transcript_grabber*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["youtube_transcript_grabber"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
